# spotter-task-backend

./: .gitignore  main.py  manage.py  pyproject.toml  render.yaml  requirements.txt
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_routeinfo_end_location_lat_and_more.py  0003_routeinfo_remaining_cycle.py
spotter_task/: asgi.py  prod.py  settings.py  urls.py  wsgi.py
